# bfvm

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  compiler.cc  compiler_test.cc  instruction.cc  machine.cc  machine_test.cc  main.cc  mandelbrot.b  run-test.ps1
src/: compiler.cc  instruction.cc  machine.cc
test/: compiler_test.cc  machine_test.cc
